[package]
name = "karma_calculator"
version = "0.1.0"
edition = "2021"

[dependencies]
phantom-zone = { git = "https://github.com/ChihChengLiang/phantom-zone", branch = "serde", features = [
    "non_interactive_mp",
] }
rand = "*"
itertools = "0.12.0"
rocket = { version = "0.5.1", features = ["json", "msgpack"] }
hex = "0.4.3"
serde = {version = "1.0.204"}
serde_json = { version = "1.0.120" }
bincode = { version = "1.3.3" }
rustyline = "11.0.0"

reqwest = { version = "0.12.5", features = ["json"] }
tokio = { version = "1.38.1", features = ["full"] }
clap = { version = "4.5.9", features = ["derive"] }
toml = { version = "0.8.15" }
anyhow = { version = "1.0.86" }
