[package]
name = "karma_calculator"
version = "0.1.0"
edition = "2021"

[dependencies]
phantom-zone = { git = "https://github.com/ChihChengLiang/phantom-zone", rev = "7645ad5b8a329429f44feb2485b0715aad86dab1", features = [
    "non_interactive_mp",
] }
rand = "0.8.5"
itertools = "0.13.0"
rocket = { version = "0.5.1", features = ["json", "msgpack"] }
hex = "0.4.3"
serde = { version = "1.0.204" }
serde_json = { version = "1.0.120" }
bincode = { version = "1.3.3" }
rustyline = "14.0.0"
reqwest = { version = "0.12.5", features = ["json", "stream"] }
tokio = { version = "1.38.1", features = ["full"] }
clap = { version = "4.5.9", features = ["derive"] }
toml = { version = "0.8.15" }
anyhow = { version = "1.0.86" }
tabled = { version = "0.15.0" }
thiserror = { version = "1.0.63" }
indicatif = "0.17.8"
tokio-util = { version = "0.7.11", features = ["io"] }
rayon = { version = "1.10.0" }
futures = { version = "0.3.30" }
